# IcarusDownloadManager

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  IcarusDownloadManager.rc  IcarusDownloadManager.sln  IcarusDownloadManager.vcxproj  IcarusDownloadManager.vcxproj.filters  Makefile  README.md  conanfile.txt  resource.h  vcpkg.json
.github/workflows/: cmake.yml  rust-ubuntu-latest.yml  rust.yml
include/Managers/: ActionManager.h  CommitManager.h  FileManager.h  TokenManager.h  UserManager.h
include/Models/: API.h  Flags.h  IcarusAction.h  Song.h  Token.h  UploadForm.h  User.h
include/Parsers/: APIParser.h
include/Syncers/: Delete.h  Download.h  RetrieveRecords.h  SyncerBase.h  Upload.h
include/UI/: AboutWindow.h  CommonWindow.h  MainWindow.h
include/Utilities/: Checks.h  Conversions.h
scripts/: bld.sh  deb.sh  rel.sh
src/: Main.cpp  help.rs  main.rs  split Upload.cpp  version.rs
src/Managers/: ActionManager.cpp  ActionManager.h  CommitManager.cpp  CommitManager.h  FileManager.cpp  FileManager.h  TokenManager.cpp  TokenManager.h  UserManager.cpp  UserManager.h  actionmanager.rs
src/Models/: API.h  API.rs  Flags.h  IcarusAction.h  Song.cpp  Song.h  Token.h  UploadForm.h  User.h
src/Parsers/: APIParser.cpp  APIParser.h
src/Syncers/: Delete.cpp  Delete.h  Download.cpp  Download.h  RetrieveRecords.cpp  SyncerBase.h  Upload.cpp  Upload.h
src/UI/: AboutWindow.cpp  AboutWindow.h  CommonWindow.h  MainWindow.cpp  MainWindow.h
src/Utilities/: Conversions.cpp  Conversions.h
src/constants/: file_extensions.rs
src/managers/: action_managers.rs  commit_manager.rs  file_manager.rs  mod.rs  token_manager.rs  user_manager.rs
src/models/: api.rs  flags.rs  icarus_action.rs  mod.rs  song.rs  token.rs  upload_form.rs  user.rs
src/parsers/: api_parser.rs  mod.rs
src/syncers/: common.rs  delete.rs  download.rs  mod.rs  retrieve_records.rs  syncer_base.rs  upload.rs
src/tests/: tests.rs
src/utilities/: checks.rs  conversions.rs  mod.rs  string.rs
tests/sample2_tracks/: album.json  track01.flac  track02.flac  track03.flac
